css/style.css
/*
 * Contributors: Sam Sherar, Tom Rosier.
 */

* {
  margin: 0;
  padding: 0;
  font-size:12pt;
  border:0;
  color:#fff;
  font-family:Tahoma,Verdana,serif;
}

html, body {
  height:100%;
  background-color:#369;
}

.page {
  min-height:100%;
  height:100%;
  display:block;
}

.hidden {
  display:none;
}

.center {
  margin: auto;
  position:absolute;
  top:0;
  left:0;
  bottom:0;
  right:0;
  height:50px;
}

.width-50 {
  width:50%;
}

.width-70 {
  width:67%;
}

.width-20 {
  width:20%;
}

.width-30 {
  width:27%;
}

.spread {
  height:100%;
}

input.spread {
  font-size:1.2em;
  padding-left:1em;
  padding-right:-1em;
}

input {
  color:#333;
}

button {
  background-color:rgba(30,80,130,1);
  color:#fff;
}

button:disabled {
  color:#999;
  background-color:rgba(0,0,0,0.7);
}


.drop-background {
  background-color:rgba(255,255,255,0.2);
}

.pull-right {
  float:right;
}

.pull-right:after {
  clear:both;
}

.width-column-third {
  margin:auto;
  height:100%;
  width:30%;
  padding-left:2em;
  float:left
}

#menu .pure-menu-heading {
  border-bottom: none;
  background-color: #369;
}

#menu {
  width: 200px;
  text-align: center;
  left: 200px;
  margin-left: -200px;
}

.userlist {
  padding-top: 10px;
}

.header {
  padding: 0px;
  border-bottom: none;
}

.header-right {
  bottom:   10px;
  right:    10px;
  position: fixed;
}

#layout {
  padding-left: 200px;
}

.center-cont {
  margin-right: auto;
  margin-left: auto;
  width: 325px;
}

#main-page {
  margin-right: auto;
  margin-left: auto;
  text-align: center;
}

#aber-username {
  text-align: center;
  width: 250px;
}

#signoff {
  width: 275px;
  margin-right: auto;
  margin-left: auto;
}

